Patch to properly normalise the y axis in the CPU history graph (Resources tab)

https://bugzilla.gnome.org/show_bug.cgi?id=748999